--- a/src/index.html
+++ b/src/index.html
@@ -234,14 +234,14 @@
     <section id="industries" class="industries">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 offset-md-2">
+          <div class="col-md-12 offset-md-0 col-lg-8 offset-lg-2">
             <div class="industries__tittle tittle">
               Prengi предоставляет экспертные решения для Вашей отрасли
             </div>
           </div>
         </div>
           <div class="row">
-            <div class="col-md-10 offset-md-1">
+            <div class="col-md-19 offset-md-0 col-xl-10 offset-xl-10">
               <nav class="industries__nav">
                 <ul class="carousel__mac-indicators industries__items">
                   <li data-bs-target="#carouselExampleIndicatorsMac" data-bs-slide-to="0" class="industries__item" aria-label="Slide 1"><a href="">Prengi Production</a></li>
@@ -255,7 +255,7 @@
             </div>            
           </div>
           <div class="row">
-            <div class="col-md-10 offset-1 col-xl-12 offset-xl-0">
+            <div class="col-md-12 offset-0 col-xl-12 offset-xl-0">
               <div class="industries__buttons-wrapper">
                 <button class="carousel__mac-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsMac"  data-bs-slide="prev">
                   <span class="carousel-control-prev-icon carousel__mac-control-prev-icon" aria-hidden="true"></span>
