--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
                 </h2>
                 <button class="header__button button">Получить доступ</button>
               </div>
-                <div class="col-9 offset-2 col-sm-7 offset-sm-2 col-md-8 offset-md-3 col-md-6 col-lg-6 offset-lg-0 col-xl-5 offset-xl-1">
+                <div class="col-12 offset-0 col-sm-12 offset-sm-0 col-md-12 offset-md-0 col-lg-6 offset-lg-0 col-xl-5 offset-xl-1">
                   <div class="header__phone">
                       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                         <div class="carousel-indicators">
@@ -241,7 +241,7 @@
           </div>
         </div>
           <div class="row">
-            <div class="col-md-19 offset-md-0 col-xl-10 offset-xl-10">
+            <div class="col-12">
               <nav class="industries__nav">
                 <ul class="carousel__mac-indicators industries__items">
                   <li data-bs-target="#carouselExampleIndicatorsMac" data-bs-slide-to="0" class="industries__item" aria-label="Slide 1"><a href="">Prengi Production</a></li>
@@ -255,7 +255,7 @@
             </div>            
           </div>
           <div class="row">
-            <div class="col-md-12 offset-0 col-xl-12 offset-xl-0">
+            <div class="col-12">
               <div class="industries__buttons-wrapper">
                 <button class="carousel__mac-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsMac"  data-bs-slide="prev">
                   <span class="carousel-control-prev-icon carousel__mac-control-prev-icon" aria-hidden="true"></span>
