--- a/src/index.html
+++ b/src/index.html
@@ -303,9 +303,15 @@
     </section>
     <section id="benefits" class="benefits">
 <div class="container">
+<div class="row">
+  <div class="col-12">
     <div class="benefits__tittle tittle">
       Преимущества Prengi для Вашей отрасли
     </div>
+  </div>
+</div>
+
+    
 <div class="row g-0">
   <div class="col-md-6">
     <div class="benefits__item">
@@ -339,7 +345,8 @@
         </div>
     </section>
     <section id="variants" class="variants">
-      <div class="variants__tittle tittle">Варианты развертывания Ваших данных</div>
+      
+      <div class="variants__tittle tittle">Варианты развертывания Ваших данных</div>      
       <div class="variants__wrapper">
       <div class="variants__left">
         <div class="variants__block">
