--- a/src/index.html
+++ b/src/index.html
@@ -388,7 +388,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 offset-md-1">
+          <div class="col-md-3 offset-md-0 col-lg-3 offset-lg-1">
             <div class="footer__modules">
               <div class="footer__tittle">Модули</div>
                 <ul class="footer__menu">
