--- a/src/index.html
+++ b/src/index.html
@@ -87,11 +87,11 @@
           <img src="icons/Prengi_logo.png" alt="Prengi logo">
           <nav class="header__popup-nav">
             <ul class="header__popup-menu">
-              <li class="header__list"><a href="#">главная</a></li>
-              <li class="header__list"><a href="#modules">Модули</a></li>
-              <li class="header__list"><a href="#industries">Отрасли</a></li>
-              <li class="header__list"><a href="#about">О нас</a></li>
-              <li class="header__list"><a href="#variants">Наши обязательства</a></li>
+              <li class="header__popup-list"><a href="#">главная</a></li>
+              <li class="header__popup-list"><a href="#modules">Модули</a></li>
+              <li class="header__popup-list"><a href="#industries">Отрасли</a></li>
+              <li class="header__popup-list"><a href="#about">О нас</a></li>
+              <li class="header__popup-list"><a href="#variants">Наши обязательства</a></li>
             </ul>
           </nav>
         </div>
