--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
             </div>         
               </div>
               <div class="row">
-                <div class="col-md-4 offset-md-4">
+                <div class="col-md-12">
                   <div class="modules__arrow">
                     <img src="icons/arrow_down.png" alt="arrow down">
                   </div>
