prengi_for_portfolio_28_08_22_night

--- a/src/index.html
+++ b/src/index.html
@@ -273,22 +273,22 @@
                     <div id="carouselExampleIndicatorsMac" class="carousel carousel__mac slide" data-bs-ride="carousel">
                       <div class="carousel-inner carousel__mac-inner">
                         <div class="carousel-item active">
-                          <img src="icons/Prengi_production.png" class="d-block w-100" alt="...">
+                          <img src="img/prengi_production.png" class="d-block w-100" alt="Production">
                         </div>
                         <div class="carousel-item">
-                          <img src="icons/prengi_FMC.png" class="d-block w-100" alt="...">
+                          <img src="img/prengi_FMC.png" class="d-block w-100" alt="FMC">
                         </div>
                         <div class="carousel-item">
-                          <img src="icons/prengi_retail.png" class="d-block w-100" alt="...">
+                          <img src="img/Prengi_retail.png" class="d-block w-100" alt="Retail">
                         </div>
                         <div class="carousel-item">
-                          <img src="icons/prengi_logistic.png" class="d-block w-100" alt="...">
+                          <img src="img/Prengi_logistic.png" class="d-block w-100" alt="Logistic">
                         </div>
                         <div class="carousel-item">
-                          <img src="icons/prengi_it.png" class="d-block w-100" alt="...">
+                          <img src="img/prengi_it.png" class="d-block w-100" alt="It">
                         </div>
                         <div class="carousel-item">
-                          <img src="icons/Prengi_hr.png" class="d-block w-100" alt="...">
+                          <img src="img/Prengi_hr.png" class="d-block w-100" alt="Hr">
                         </div>
                       </div>
                       
